test/typechecker.d/invalid/const5.surc.bad
f(c: Char): Integer = c
